--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dashboard",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "homepage": "https://deepakkumardewani.github.io/react-admin-dashboard",
   "type": "module",
@@ -9,7 +9,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@syncfusion/ej2": "^20.4.53",
